[package]
name = "raider-io"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"
description = ["REST bindings to raider.io"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
thiserror = "1.0.16"
serde = { version = "1.0.110", features = ["derive"] }
itertools = "0.9.0"
serde_repr = "0.1.5"
chrono = { version = "0.4.11", features = ["serde"]}

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
